--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+html,body{
+    height: 100%;
+    width: 100%;
+}
 
 .container{
     display: flex;
@@ -19,7 +23,7 @@
     width: 100vw;
     height: 100vh;
     background-color:rgb(225, 218, 218);
-    padding: 50px;
+    padding:0 50px;
 }
 ul{
     text-decoration: none;
@@ -27,6 +31,9 @@ ul{
 
 }
 li{
+    margin: 50px 0;
+}
+p{
     margin: 50px 0;
 }
 
